<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header_session"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/session_detail_header_background"
        android:paddingBottom="@dimen/content_padding_normal"
        android:paddingLeft="@dimen/content_padding_normal"
        android:paddingRight="@dimen/content_padding_normal"
        android:paddingTop="@dimen/content_padding_normal">

        <TextView
            android:id="@+id/session_feedback_title"
            style="@style/TextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/session_feedback_subtitle"
            style="@style/TextHeaderSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/session_feedback_title" />
    </RelativeLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll_view"
        android:layout_below="@id/header_session"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
       android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="@dimen/default_margin">

                <TextView
                    android:id="@+id/rate_sessiontitle"
                    style="@style/FeedbackQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/session_feedback_rating_text" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <RatingBar
                        android:id="@+id/rating_bar_0"
                        style="@style/FeedbackRatingBar"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin" />

                    <ImageView
                        android:id="@+id/thumbs_down_overall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/rating_bar_0"
                        android:layout_below="@id/rating_bar_0"
                        android:src="@drawable/ic_fa_thumbs_o_down"
                        android:tint="@color/session_feedback_thumbs_down_red" />

                    <ImageView
                        android:id="@+id/thumbs_up_overall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/rating_bar_0"
                        android:layout_below="@id/rating_bar_0"
                        android:src="@drawable/ic_fa_thumbs_o_up"
                        android:tint="@color/session_feedback_thumbs_up_green" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/rate_relevanttext"
                    style="@style/FeedbackQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/session_feedback_relevant_text_title" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <com.google.android.apps.iosched.ui.widget.NumberRatingBar
                        android:id="@+id/rating_bar_1"
                        style="@style/FeedbackNumberRatingBar"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin" />

                    <ImageView
                        android:id="@+id/thumbs_down_relevant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/rating_bar_1"
                        android:layout_below="@id/rating_bar_1"
                        android:src="@drawable/ic_fa_thumbs_o_down"
                        android:tint="@color/session_feedback_thumbs_down_red" />

                    <ImageView
                        android:id="@+id/thumbs_up_relevant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/rating_bar_1"
                        android:layout_below="@id/rating_bar_1"
                        android:src="@drawable/ic_fa_thumbs_o_up"
                        android:tint="@color/session_feedback_thumbs_up_green" />
                </RelativeLayout>

                <!-- Q2 -->
                <TextView
                    style="@style/FeedbackQuestion"
                    android:text="@string/session_feedback_content_text_title" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <com.google.android.apps.iosched.ui.widget.NumberRatingBar
                        android:id="@+id/rating_bar_2"
                        style="@style/FeedbackNumberRatingBar"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin" />

                    <ImageView
                        android:id="@+id/thumbs_down_feedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/rating_bar_2"
                        android:layout_below="@id/rating_bar_2"
                        android:src="@drawable/ic_fa_thumbs_o_down"
                        android:tint="@color/session_feedback_thumbs_down_red" />

                    <ImageView
                        android:id="@+id/thumbs_up_feedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/rating_bar_2"
                        android:layout_below="@id/rating_bar_2"
                        android:src="@drawable/ic_fa_thumbs_o_up"
                        android:tint="@color/session_feedback_thumbs_up_green" />
                </RelativeLayout>


                <TextView
                    style="@style/FeedbackQuestion"
                    android:text="@string/session_feedback_speakerquality_text_title" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">


                    <com.google.android.apps.iosched.ui.widget.NumberRatingBar
                        android:id="@+id/rating_bar_3"
                        style="@style/FeedbackNumberRatingBar"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin" />


                    <ImageView
                        android:id="@+id/thumbs_down_speaker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/rating_bar_3"
                        android:layout_below="@id/rating_bar_3"
                        android:src="@drawable/ic_fa_thumbs_o_down"
                        android:tint="@color/session_feedback_thumbs_down_red" />

                    <ImageView
                        android:id="@+id/thumbs_up_speaker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/rating_bar_3"
                        android:layout_below="@id/rating_bar_3"
                        android:src="@drawable/ic_fa_thumbs_o_up"
                        android:tint="@color/session_feedback_thumbs_up_green" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/submit_feedback_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/actionbar_background"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/session_feedback_submit_feedback_content"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_submit_feedback"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:paddingRight="20dp"
            android:text="@string/session_feedback_submit_feedback_text"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="@dimen/text_size_small" />
    </FrameLayout>
</RelativeLayout>